--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ setenv =
 deps =
     -r{toxinidir}/dev-requirements.txt
 commands =
-    pytest --basetemp={envtmpdir}
+    pytest --basetemp={envtmpdir} {posargs}
 
 [testenv:flake8]
 basepython = python3.10
